--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
 	font-family: Corbel, Arial, sans-serif;
 	margin: 0;
+	background-color: #DEB887;"
 }
 a{
 	color: #000000;
@@ -68,7 +69,16 @@ a{
 	background-color: #eff5f5;
 }
 .p-stile{
-	text-align: center;
-	width: 600px;
+	margin: 5px;
+	position: relative;
+	float: left;
+	width: 35%;
 	height: 300px;
+	font-size: 24px;
+}
+.img-vita{
+	padding: 0;
+	margin: 10px;
+	position: relative;
+	float: left;
 }
