--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
 	font-family: Corbel, Arial, sans-serif;
 	margin: 0;
-	background-color: #DEB887;"
+	background-color: #DEB887;
 }
 a{
 	color: #000000;
@@ -68,17 +68,52 @@ a{
 .button:hover{
 	background-color: #eff5f5;
 }
-.p-stile{
+.p-stile, #p-resp{
 	margin: 5px;
 	position: relative;
 	float: left;
 	width: 35%;
 	height: 300px;
-	font-size: 24px;
+	font-size: 31px;
 }
-.img-vita{
+.img-vita, .img-vita2{
 	padding: 0;
 	margin: 10px;
 	position: relative;
 	float: left;
+
+}
+.sfondo-opere{
+	margin-left: 70px;
+	margin-right: 70px;
+    background-color: #663300 !important;
+    padding-right: 5% !important;
+    padding-left: 5% !important;
+    color: #fff !important;
+}
+.title-opere{
+	text-align: center;
+	font-family: fantasy;
+	color: #00ffff;
+}
+.text-opere{
+	font-size: 25px;
+	position: relative;
+	float: center;
+	color: #ff9900;
+}
+/*VISUALIZZAZIONE DA MOBILE ORIZZONTALE*/
+@media (max-width: 1615px) {
+	.img-vita , .img-vita2{
+		margin: 0;
+		padding: 10px;
+		display: none;
+		height: auto;
+	}
+	.p-stile{
+		display: none;
+	}
+	#p-resp{
+		width: 100%;
+	}
 }
