--- a/style.css
+++ b/style.css
@@ -90,8 +90,8 @@ a{
 
 }
 .sfondo-opere{
-	margin-left: 70px;
-	margin-right: 70px;
+	margin-left: 30px;
+	margin-right: 30px;
     background-color: #cc0000 !important;
     padding-right: 5% !important;
     padding-left: 5% !important;
@@ -185,3 +185,13 @@ td {
  font-family: Geneva;
 
 }
+
+.resp-div{
+	width: 350px;
+	height: 350px;
+	text-align: center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	border: 1px solid red;
+	margin: 5px;
+  }
